libs/sqf/tests/snapshots/compiler__simple_format_font.snap
---
source: libs/sqf/tests/compiler.rs
expression: hex
---
01000000053200000002430300060000666f726d61741000005f7265647465787464697361626c65641100005f677265656e74657874656e61626c6564110000016301000002002404000402000000011f00003c666f6e7420636f6c6f723d2723464630303030273e25313c2f666f6e743e010500007468696e6704020032c2003030680632c000000301be0000236c696e65203620225c666f726d61745f700d00102e737166220a70726976617465205f7265645465787444697361626c6564203d20668f055b28223d6c020222292c20229313225d3b28400102677265656e6a0a456e3d44012ff0022c450100681e020000000008700002010000023660010306000000061ba401000801000001010002880000000007000000066c00000000070002001100000201001000002f666f726d61745f666f6e742e737166030300000000000000
