libs/sqf/tests/snapshots/compiler__simple_get_visibility.snap
---
source: libs/sqf/tests/compiler.rs
expression: hex
---
0100000005a70000000200261200060000706172616d730500005f61726731080000747970656e616d650200003d3d0200006966060000657965706f730400007468656ed0050b320a00005f706f736974696f6e312a3000001a3208000064697374616e63650100002f0100005e0b00005f6d756c7469706c6965720800005f69676e6f7265690e5fa8010005320f0000636865636b7669736962696c6974790100002a110000013b040000020d0c000402000000010500005f61726731e001000932010600004f424a45435400420000001d0000800600000000075274000302000100024ba4010105000759a701010008cf020200057506007e04008a2bfd009a6c0503030007000293a40101050007a1a701070008cf020200057506007c0400010402000000010a00005f706f736974696f6e31a80200040800005f69676e6f726531050700006f626a6e756c6cac032ab90032a80228b9003229b80002020000803f640c000940020000c842010400005649455701b40100706172616d73205b228723222c2080010f32225d3b0a69662028747970654e616d6520980302203d3d2022a026062229207468656e207be40305205b657965506f73bd012cbb005d207d311d0132371f0132203d2b1d0132bd08329c08a81028c00227a604222c7c17d4240b222c206f626a4e756c6c5d5d3b0a6e06322030cd00322acc00700129cc0000100a70726976617465205f6d756c7469706c696572203d2031202f202832205e202828289006072064697374616e636520274c000b3229202f2031303029293b0a285bf3372c20226b2e222c20c4020002325d20636865636b5669736962696c697479205b270e01312c293c01015d29202a2a2f020a000a684901000000317f000100006b3b0000017601072874006a52021fa401040200010100032eb001010300021ba401040400010200033bb00102060000077068016e510267a401a10776b0010103000263a4010404000103000383b0016107ab6801060400010001040003b1b0017168df6b01050007626f03e5b001745c0406000107000735781503070008000749a4010109000340a401040a000108000355b001010b000331a401010c00032ca401010b000614a401020d0000076068010608000e000109000772b3010f0008d802010300078dac020108000799a701090008cc02010200037cac020004100007a80100000008000d0003a601000000080011001100000201001300002f6765745f7669736962696c6974792e737166030b00000000000000
