libs/sqf/tests/snapshots/compiler__simple_hash_select.snap
---
source: libs/sqf/tests/compiler.rs
expression: hex
---
010000000513000000022402000a00005f6578706c6f7369766501000023110000015a00000002002803000200000000012a0000236c696e65203120225c686173685f73656c6563742e737166220a5f6578706c6f73697665202320300a00010000006500047200071b74000e01000000010000032600000000010001001100000201001000002f686173685f73656c6563742e737166030200000000000000
