libs/sqf/tests/snapshots/compiler__simple_hello.snap
---
source: libs/sqf/tests/compiler.rs
expression: hex
---
010000000520000000023103000500005f6e616d65060000666f726d61740a000073797374656d6368617411000001a600000002001c04000105000048454d5454010a000048656c6c6f2c202531210142000070726976617465205f6e616d65203d20229c040005223b0a73797374656d4368617420666f726d6174205b2228ea00222ca406035d3b0a000200a10009780001010000067e000001740002010100073a60016e04082ca4010004020002240000000002000100021900000000020002001100000201000a00002f68656c6c6f2e737166030300000000000000
