libs/sqf/tests/snapshots/compiler__simple_include.snap
---
source: libs/sqf/tests/compiler.rs
expression: hex
---
01000000053c00000002000607000700005f7468696e67730200005f780100002b0700008402000d6869070000666f72656163680300007374720a000073797374656d6368617411000001e2010000020d0900020000803f0200000040020000407000001680400104000074657374008c0000001e0000800500000000079e000000010600010001040003a100930102000670040701060003000404000000680970002a5001001401d80000236c696e65203120225c736f6d657468696e672e687070220a70726976617465205f8c020c73203d205b312c322c332c345d3b0a201b7400a40e00023520225c696e636c7564652e737166220a7b0a09e80e840e086869203d205f78202b20226c1e0d223b0a7d20666f7245616368205b302c8c110e5d3b0a73797374656d4368617420737472f415013b0a00076c23010000001d7c000a0100000101000102000103000860020400000004000619690101d000328100376d03037000350501556c039a300105723003ad703104070004000007cf6801740d000202cb000000010800050002c000000001080006001100000202000e00002f736f6d657468696e672e6870700c00002f696e636c7564652e737166030800000000000000
