libs/sqf/tests/snapshots/compiler__simple_oneline.snap
---
source: libs/sqf/tests/compiler.rs
expression: hex
---
01000000051200000002230300010000610100002b05000076616c756511000001530000000200160300010100003101190000707269766174652076616c7565203d2061202b202231223b0a000100008500057600071077000100007802000203120000000001000100060000000000010002001100000201000c00002f6f6e656c696e652e737166030200000000000000
