libs/sqf/tests/snapshots/compiler__simple_scalar-2.snap
---
source: libs/sqf/tests/compiler.rs
expression: compiled
---
Compiled {
    entry_point: 2,
    constants_cache_compression: true,
    constants_cache: [
        Scalar(
            5.0,
        ),
        String(
            "#line 1 \"\\scalar.sqf\"\n-5;\n",
        ),
        Code(
            Instructions {
                contents: [
                    EndStatement,
                    Push(
                        0,
                    ),
                    CallUnary(
                        0,
                        SourceInfo {
                            offset: 22,
                            file_index: 0,
                            file_line: 1,
                        },
                    ),
                ],
                source_pointer: Constant(
                    1,
                ),
            },
        ),
    ],
    names_cache: [
        "-",
    ],
    file_names: [
        "/scalar.sqf",
    ],
}
