libs/sqf/tests/snapshots/compiler__simple_scalar.snap
---
source: libs/sqf/tests/compiler.rs
expression: hex
---
01000000050200000002130000110000012000000002310300020000a0c0010400002d353b0a00010000000000000002000000000100001100000201000b00002f7363616c61722e737166030200000000000000
